syntax = "proto3";

package currencyrates;

import "google/protobuf/timestamp.proto";

service currencyratesService {
    rpc GetCurrentRate (GetCurrentRateRequest) returns (RateData) {
    }
    rpc GetCentralBankRateForDate (GetCentralBankRateRequest) returns (RateData) {
    }
}

message GetCurrentRateRequest {
    //@inject_tag: validate:"required,alpha,len=3"
    string from = 1;
    //@inject_tag: validate:"required,alpha,len=3"
    string to = 2;
}

message GetCentralBankRateRequest {
    //@inject_tag: validate:"required,alpha,len=3"
    string from = 1;
    //@inject_tag: validate:"required,alpha,len=3"
    string to = 2;
    //@inject_tag: validate:"required"
    google.protobuf.Timestamp datetime = 3;
}

message RateData {
    //@inject_tag: validate:"required,hexadecimal,len=24" json:"id" bson:"_id"
    string id = 1;
    //@inject_tag: validate:"required,alpha,len=6" json:"created_at" bson:"created_at"
    google.protobuf.Timestamp created_at = 2;
    //@inject_tag: validate:"required,alpha,len=6" json:"pair" bson:"pair"
    string pair = 3;
    //@inject_tag: validate:"required,numeric,gt=0" json:"rate" bson:"rate"
    double rate = 4;
    //@inject_tag: validate:"required,numeric,gt=0" json:"correction" bson:"correction"
    double correction = 5;
    //@inject_tag: validate:"required,numeric,gt=0" json:"corrected_rate" bson:"corrected_rate"
    double corrected_rate = 6;
    //@inject_tag: json:"is_cb_rate" bson:"is_cb_rate"
    bool is_cb_rate = 7;
    //@inject_tag: validate:"required,alpha" json:"source" bson:"source"
    string source = 8;
}